[package]
name = "clamms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: consider refactoring into lib crate/workspace of lib and bin crate


[dependencies]
hashbrown = "0.14"
krabmaga = "0.3.*"
rand = "0.8.5"
lazy_static = "*"
toml = "*"

[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
