[package]
name = "clamms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: consider refactoring into lib crate/workspace of lib and bin crate


[dependencies]
krabmaga = "0.3.*"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
lazy_static = "*"
toml = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.8.4"

[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
