[tool.poetry]
name = "clamms"
authors = ["CLAMMs Devs"]
version = "0.1.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
ipykernel = "^6.23.2"
polars = "^0.18.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
